fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -80,7 +80,7 @@
 @media screen and (max-width:768px) {
 
     #projectCont {
-        width: 21.5em;
+        width: 21.8em;
         height: 40em;
     } 
 
